Major change to learning rate. other small fixes

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
 	<div class="image">
 		<div id="canvasSimpleDiv"></div>
 	</div>
-	<p class="demoToolList"><button id="clearCanvasSimple" type="button">Reset</button>&nbsp;<button id="identify" type="button">Identify</button></p>
+	<p class="demoToolList"><button id="clearCanvasSimple" type="button">Clear</button>&nbsp;<button id="identify" type="button">Identify</button></p>
 	<p class="demoToolList2"><button id="train" type="button">Train</button>&nbsp;<button id="measure" type="button">Measure</button></p>
 </body>
 <script src="javascript.js"></script>
