small styling changes

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,7 +45,7 @@
 	font-family: Calibri;
 	letter-spacing: 2px;
 	line-height: 13px;
-	flex: 47%;
+	flex: 50%;
 	border: thick solid grey;
 	border-radius: 8px;
 	margin: 10px;
@@ -54,10 +54,11 @@
 }
 
 .image {
-	flex: 47%;
+	flex: 50%;
 	margin: 10px;
 	border-radius: 8px;
 }
+
 </style>
 </head>
 <body>
@@ -80,11 +81,11 @@
 		</div>
 		<div id="textOutput" class="textOutput">
 			<center>
-				<button id="create" type="button">Create Random Network</button>
-				<button id="load" type="button">Load a saved Network</button>
+			<button id="create" type="button">Create Random Network</button>
+			<button id="load" type="button">Load a saved Network</button>
 			</center>
 			<br>
-			<textarea id="networkJson" rows="35" cols="100" style="resize: none"></textarea>
+			<textarea id="networkJson" rows=35 style="width:100%; resize: none;"></textarea>
 		</div>
 	</div>
 </body>
