--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -97,7 +97,7 @@ ul li {
 	</div>
 	<div style="display: flex;">
 		<div id="textOutput" class="textOutput">
-			<b>Load a network:</b>
+			<b>Construct a network:</b>
 			<ul>
 				<li><button id="create" type="button">Create Random
 						Network</button></li>
