Giving a helpful tip

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -143,7 +143,7 @@ ul li {
 					<li><button id="clearCanvasSimple" type="button">Clear</button></li>
 				</ul>
 			</div>
-			<center><div id="canvasSimpleDiv"></div></center>
+			<center><div id="canvasSimpleDiv"></div><p>*For good recognition, please write at the center of the canvas. Leave a large margin on all sides.</p></center>
 			<b><div id="notification4" class="notification"></div></b> <b><div
 					id="result2"></div></b>
 		</div>
